# vrjuggler-upstream-old

modules/gadgeteer/: CMakeLists.txt
modules/gadgeteer/drivers/: CMakeLists.txt
modules/gadgeteer/drivers/Open/SdlJoystick/: CMakeLists.txt
modules/gadgeteer/drivers/Open/TUIO/: CMakeLists.txt
modules/gadgeteer/drivers/Open/VRPN/: CMakeLists.txt
modules/gadgeteer/gadget/: CMakeLists.txt
modules/gadgeteer/gadget/Type/: Analog.h  Command.h  Digital.h  Hat.h  KeyboardMouse.h  Position.h  Proxy.h  Rumble.h  String.h
modules/gadgeteer/plugins/: CMakeLists.txt
modules/gadgeteer/plugins/EventPlugin/: CMakeLists.txt
modules/jackal/: CMakeLists.txt
modules/sonix/: CMakeLists.txt
modules/sonix/plugins/: CMakeLists.txt
modules/sonix/snx/: SoundFactory.cpp
modules/tweek/: CMakeLists.txt
modules/vapor/: CMakeLists.txt
modules/vapor/vpr/: CMakeLists.txt  vprDefines.h.cmake_in
modules/vapor/vpr/Util/: SignalProxy.h
modules/vrjuggler/: CMakeLists.txt
modules/vrjuggler/vrj/Draw/Direct3D/: CMakeLists.txt
modules/vrjuggler/vrj/Draw/OpenGL/: CMakeLists.txt
modules/vrjuggler/vrj/Kernel/: Kernel.cpp
